Fixed calculation of examples directory.